--- a/jsPokedex/index.html
+++ b/jsPokedex/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Pokedex</title>
+    <link rel="stylesheet" type="text/css" href="Download v8.0.1.url">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <script src="script.js"></script>  
+  <script src="js/script.js"></script>  
 </body>
-</html>
+</html>  
