--- a/jsPokedex/index.html
+++ b/jsPokedex/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <script src="js/script.js"></script>  
+  <header>
+    <h1> 
+      <script src="js/script.js"></script>
+    </h1>
+  </header>
+  <main></main>
+  <footer></footer>
+   
 </body>
 </html>  
